--- a/app/src/main/res/layout/activity_on_boarding_one.xml
+++ b/app/src/main/res/layout/activity_on_boarding_one.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:src="@drawable/asset_boarding_one"
+        android:src="@drawable/asset_one"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
