--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -27,6 +27,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="24dp"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ivProfile"
@@ -38,6 +39,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="24dp"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ivProfile"
@@ -121,7 +123,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:hint="Email"
-                    android:enabled="false"
+                    android:focusableInTouchMode="false"
                     android:inputType="textEmailAddress"
                     android:background="@drawable/bg_outline_primary_rounded"
                     android:padding="16dp"
@@ -159,7 +161,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:hint="Telpon"
-                    android:enabled="false"
+                    android:focusableInTouchMode="false"
                     android:inputType="phone"
                     android:background="@drawable/bg_outline_primary_rounded"
                     android:padding="16dp"
