Update Dark Mode, update get Current Position

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,6 +27,7 @@
             tools:ignore="RtlHardcoded,UselessLeaf">
 
             <LinearLayout
+                android:id="@+id/btn_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="left"
@@ -34,25 +35,40 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Hello"
                     android:fontFamily="@font/poppins_semibold"
                     android:textSize="14sp"/>
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_regular"
-                    android:textSize="12sp"
-                    android:text="Your Location"/>
+                    android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:fontFamily="@font/poppins_regular"
                     android:textSize="12sp"
-                    android:text="Bandung"/>
+                    android:text="Your Location"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_down"/>
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="12sp"
+                    android:text="None"/>
 
 
             </LinearLayout>
@@ -213,15 +229,14 @@
             android:id="@+id/rv_pilih"
             android:layout_width="match_parent"
             android:layout_height="365dp"
-            app:layout_constraintTop_toBottomOf="@id/ll_3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="12dp"
-            tools:listitem="@layout/card_item"
-            />
-
-
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ll_3"
+            tools:listitem="@layout/card_item" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
