--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -160,7 +160,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_rekomendasi"
             android:layout_width="match_parent"
-            android:layout_height="365dp"
+            android:layout_height="375dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="12dp"
@@ -228,7 +228,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_pilih"
             android:layout_width="match_parent"
-            android:layout_height="365dp"
+            android:layout_height="375dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="12dp"
@@ -236,7 +236,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ll_3"
-            tools:listitem="@layout/card_item" />
+            tools:listitem="@layout/card_item_two" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
