Update Clean Code

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -146,11 +146,11 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/btn_LihatSemuaRekomendasi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_regular"
                     android:textSize="11sp"
-
                     android:text="Lihat Semua"
                     tools:ignore="SmallSp" />
 
@@ -215,6 +215,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/btn_LihatSemuaPilihan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_regular"
